--- a/main.css
+++ b/main.css
@@ -371,11 +371,13 @@ a:hover {
     width: 40px;
     height: 40px;
     margin-top: 10px;
-    border-radius: 53%;
+    background-color: #fff;
+    border-radius: 10%;
 }
 
 .footer-content a img:hover {
     background-color: #0056b3;
+    border-radius: 53%;
 }
 
 @media (min-width: 768px) {
